# hstay-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  main.py
app/api/routes/: extract.py
app/core/: config.py  errors.py
app/models/: schemas.py
app/services/: docling_service.py  download_service.py  extraction_service.py  gcs_download_service.py  langextract_service.py
tests/: test_download_service.py  test_extract_route.py  test_extract_route_v2.py  test_extraction_service.py  test_gcs_download_service.py
