[project]
name = "hstay-ai"
version = "0.1.0"
description = "FastAPI document extraction PoC for Indian identity documents"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "docling[rapidocr]>=2.0.0",
    "langextract[openai]>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
